// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-number-input > renders default number input 1`] = `
"<span
  class="number-input"
>
  <span
    class="textbox"
    placeholder=""
  >
    <button
      aria-hidden="true"
      class="number-input__decrement icon-btn icon-btn--transparent icon-btn--small"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--24"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21 11H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2Z"
          />
        </symbol>
        <use
          href="#icon-remove-24"
        />
      </svg>
    </button>
    <input
      aria-describedby="MARKO-ID-0 MARKO-ID-1"
      aria-label="Enter a number"
      class="textbox__control"
      id="GENERATED-1"
      max="100"
      min="0"
      type="number"
      value="0"
    />
    <button
      aria-hidden="true"
      class="number-input__increment icon-btn icon-btn--transparent icon-btn--small"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--24"
      >
        <symbol
          id="GENERATED-2"
          viewBox="0 0 24 24"
        >
          <path
            d="M21 11h-8V3a1 1 0 0 0-2 0v8H3a1 1 0 0 0 0 2h8v8a1 1 0 0 0 2 0v-8h8a1 1 0 0 0 0-2Z"
          />
        </symbol>
        <use
          href="#icon-add-24"
        />
      </svg>
    </button>
  </span>
</span>"
`;

exports[`evo-number-input > renders number input with label 1`] = `
"<span
  class="number-input"
>
  <span
    class="textbox"
    placeholder=""
  >
    <label
      for="GENERATED-1"
    >
      Enter a number
    </label>
    <button
      aria-hidden="true"
      class="number-input__decrement icon-btn icon-btn--transparent icon-btn--small"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--24"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21 11H3a1 1 0 0 0 0 2h18a1 1 0 0 0 0-2Z"
          />
        </symbol>
        <use
          href="#icon-remove-24"
        />
      </svg>
    </button>
    <input
      aria-describedby="MARKO-ID-0 MARKO-ID-1"
      class="textbox__control"
      id="GENERATED-1"
      max="100"
      min="0"
      type="number"
      value="1"
    />
    <button
      aria-label="Clear"
      class="number-input__delete icon-btn icon-btn--transparent icon-btn--small"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--24"
      >
        <symbol
          id="GENERATED-2"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 11a1 1 0 1 0-2 0v6a1 1 0 1 0 2 0v-6Zm3-1a1 1 0 0 1 1 1v6a1 1 0 1 1-2 0v-6a1 1 0 0 1 1-1Z"
          />
          <path
            clip-rule="evenodd"
            d="m7.22 5 .431-1.728A3 3 0 0 1 10.561 1h2.878a3 3 0 0 1 2.91 2.272L16.781 5H22a1 1 0 1 1 0 2h-1.59l-1.244 13.28A3 3 0 0 1 16.179 23H7.82a3 3 0 0 1-2.987-2.72L3.59 7H2a1 1 0 0 1 0-2h5.22Zm2.372-1.243a1 1 0 0 1 .97-.757h2.877a1 1 0 0 1 .97.757L14.719 5H9.282l.31-1.243ZM7.979 7h10.422l-1.227 13.093a1 1 0 0 1-.995.907H7.82a1 1 0 0 1-.995-.907L5.598 7H7.98Z"
            fill-rule="evenodd"
          />
        </symbol>
        <use
          href="#icon-delete-24"
        />
      </svg>
    </button>
    <button
      aria-hidden="true"
      class="number-input__increment icon-btn icon-btn--transparent icon-btn--small"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon icon--24"
      >
        <symbol
          id="GENERATED-3"
          viewBox="0 0 24 24"
        >
          <path
            d="M21 11h-8V3a1 1 0 0 0-2 0v8H3a1 1 0 0 0 0 2h8v8a1 1 0 0 0 2 0v-8h8a1 1 0 0 0 0-2Z"
          />
        </symbol>
        <use
          href="#icon-add-24"
        />
      </svg>
    </button>
  </span>
</span>"
`;
